@@ -12,3 +12,4 @@ In this version of Retrospect we fixed some minor bugs in channels and introduce
 [B]Channel related[/B]
 * Fixed: descriptions of AT5 had HTML tags (Fixes #1343)
 * Fixed: KetNet streams broke (Fixes #1344)
+* Fixed: issue with naming of episodes without title (Fixes #1345)
